Squashed commit of the following:
commit 657b28a8f5fba53063c3a1dee4b8514ba15e0a1a
Author: Charles Honton <chonton@proofpoint.com>
Date:   Wed May 31 09:33:25 2023 -0700

    javax to jakarta and release 0.0.3

commit ad4e0272e9429d44ae6f3ec7d89e8ce66a05e8ae
Author: Charles Honton <chonton@proofpoint.com>
Date:   Wed May 31 09:21:32 2023 -0700

    reformat code and update dependencies